feat:optimize header

--- a/cart.html
+++ b/cart.html
@@ -8,13 +8,13 @@
     <link href="./scss/main.css" rel="stylesheet">
 </head>
 <body>
-     <header class="flex justify-between w-full max-w-[1024px] p-[33px] md:p-42px mr-auto ml-auto mt-[30px] items-center">
+     <header class="flex justify-between w-full max-w-[1024px] h-10 px-[33px] md:px-[42px] mr-auto ml-auto mt-[30px] mb-[30px] items-center">
         <button class="hover:cursor-pointer block md:hidden" >
             <img src="./images/dehaze-24px.png" alt="漢堡選單">
         </button>
         <picture class="w-[200px] h-10 items-center">
             <source media="(max-width:768px)" srcset="./images\logotype-lg-dark.svg">
-            <img src="./images/logo-all-dark.svg" alt="品牌Logo">
+            <img class="h-10" src="./images/logo-all-dark.svg" alt="品牌Logo">
         </picture>
         <nav class="max-w-[300px] flex justify-between gap-[79px] items-center">
             <ul class="w-[215px] hidden md:flex justify-between items-center">
