--- a/index.html
+++ b/index.html
@@ -28,6 +28,26 @@
         </nav>
     </header>
 
+    <main class= "max-w-[1024px] mx-auto px-[33px] md:px-[42px]">
+        <herosection class="relative mb-[60px]">
+            <picture class="max-w-[940px] h-[496px] overflow-hidden z-0">
+                <img class=" block w-full h-[496px] object-cover" src="https://bit.ly/2OhbMHr" alt="主視覺圖">
+            </picture>
+            <ul class="w-full max-w-[781px] h-[256px] flex items-center justify-between text-center mx-auto z-1 text-white text-2xl font-light tracking-widest max-md:text-[20px] md:-mt-[89px]" >
+                <li class="w-[33.3%] max-w-[259.67px] h-full bg-cover bg-center [writing-mode:vertical-rl]" style="background-image: url('https://bit.ly/2R5tqwD')">
+                    <a class="flex justify-center items-center w-full h-full bg-[#3F5D45]/80 backdrop-blur-[5px] hover:bg-[#FFE180]/80 hover:font-semibold hover:text-[#3F5D45]" href="#">本日精選</a>
+                </li>
+                <li class="w-[33.4%] h-full bg-cover bg-center [writing-mode:vertical-rl]" style="background-image: url('https://bit.ly/2Dwoxd7')"><a class="flex justify-center items-center w-full h-full border-y bg-[#3F5D45]/80 backdrop-blur-[5px] hover:bg-[#FFE180]/80 hover:font-semibold hover:text-[#3F5D45]" href="#">人氣推薦</a></li>
+                <li class="w-[33.3%] max-w-[259.67px] h-full bg-cover bg-center [writing-mode:vertical-rl]" style="background-image: url('https://bit.ly/2OUteif')"><a class="flex items-center justify-center w-full h-full  bg-[#3F5D45]/80 backdrop-blur-[5px] hover:bg-[#FFE180]/80 hover:font-semibold hover:text-[#3F5D45]" href="#">新品上市</a></li>
+            </ul>
+        </herosection>
+
+               
+
+
+    </main>
+   
+
 <script src="./js/all.js"></script>
 </body>
 </html>
