feat/add article section and update the image sources

--- a/index.html
+++ b/index.html
@@ -114,7 +114,35 @@
             </div>
           </div>
         </section>
-        <section></section>
+
+        <section class="bg-[#EAF0ED] h-[420px] mt-[105px]">
+          <div class=" flex flex-row-reverse justify-between mx-auto w-full max-w-[940px]">
+            <img
+              class="w-full h-full max-w-[460px] max-h-[460px] object-cover -mt-[20px] md-[20px]"
+              src="https://bit.ly/2zzAQS4"
+            />
+            <div class="flex justify-between w-full max-w-[425px] h-[420px]">
+              <div
+                class="flex flex-col justify-between [writing-mode:vertical-rl] [text-orientation:upright] text-[#8DA291] h-[280px] w-full max-w-[256px] mx-auto"
+              >
+                <p>青山依舊在，幾度夕陽紅。慣看秋月春</p>
+                <p>一壺濁酒喜相逢，浪花淘盡英雄。是非</p> 
+                <p>轉頭空，滾滾長江東逝水，白髮漁樵江</p>
+                <p>古今多少事，都付笑談中。</p>
+                <p>&nbsp</p>
+                <p>是非成敗轉頭空，滾滾長江東逝水，白</p>
+                <p>樵江渚上，古今多少事，都付笑談中。</p>
+              </div>
+              <picture>
+                <img
+                  class="max-w-[89px] max-h-[307.15px] -mt-[20px]"
+                  src="./images/lg-為什麼一定要吃甜點@2x.png"
+                />
+              </picture>
+            </div>
+          </div>
+
+        </section>
       </article>
     </main>
 
