feat/add the 3rd section of article

--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@
               </picture>
             </div>
           </div>
-
+        </section>
+        <section class=" flex justify-center items-center mt-[95px] mb-[80px]">
+          <img class="max-w-[89px] max-h-[328px]" src="./images/lg-想吃甜點是不需要理由的@2x.png">
         </section>
       </article>
     </main>
