--- a/index.html
+++ b/index.html
@@ -146,7 +146,51 @@
           <img class="max-w-[89px] max-h-[328px]" src="./images/lg-想吃甜點是不需要理由的@2x.png">
         </section>
       </article>
+        
+      <section class="mb-[60px]">
+        <ul class="flex justify-between max-w-[940px] mx-auto">
+          <li class="w-[32%] max-w-[300px]">
+            <figure class="relative">
+              <div class="label absolute z-10 left-5"><span>本日精選</span></div>
+              <img class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer" src="./images/favorite_border.png" alt="加入我的收藏">
+              <img class="max-h-[315px]" src="./images/p-2.png">
+            </figure>
+            <figcaption class="flex">
+              <p class="product-name">焦糖馬卡龍</p>
+              <P class="product-price">NT$450</p>
+            </figcaption>
+            <button class="lg-btn w-full">加入購物車</button>
+          </li>
+
+          <li class="w-[32%] max-w-[300px]">
+            <figure class="relative">
+              <div class="label absolute z-10 left-5"><span>本日精選</span></div>
+              <img class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer" src="./images/favorite_border.png" alt="加入我的收藏">
+              <img class="max-h-[315px]" src="./images/p-5.png">
+            </figure>
+            <figcaption class="flex">
+              <p class="product-name">焦糖馬卡龍</p>
+              <P class="product-price">NT$450</p>
+            </figcaption>
+            <button class="lg-btn w-full">加入購物車</button>
+          </li>
+
+          <li class="w-[32%] max-w-[300px]">
+            <figure class="relative">
+              <div class="label absolute z-10 left-5"><span>本日精選</span></div>
+              <img class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer" src="./images/favorite_border.png" alt="加入我的收藏">
+              <img class="max-h-[315px] w-full h-full object-cover" src="https://bit.ly/2QbVsVR">
+            </figure>
+            <figcaption class="flex">
+              <p class="product-name">焦糖馬卡龍</p>
+              <P class="product-price">NT$450</p>
+            </figcaption>
+            <button class="lg-btn w-full">加入購物車</button>
+          </li>
+    
+      </section>
     </main>
+
 
     <script src="./js/all.js"></script>
   </body>
