feat:optimize the productcards in index

--- a/index.html
+++ b/index.html
@@ -153,7 +153,20 @@
             <figure class="relative">
               <div class="label absolute z-10 left-5"><span>本日精選</span></div>
               <img class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer" src="./images/favorite_border.png" alt="加入我的收藏">
-              <img class="max-h-[315px]" src="./images/p-2.png">
+              <img class="h-[315px] w-full object-cover" src="https://bit.ly/2zBjQuq">
+            </figure>
+            <figcaption class="flex">
+              <p class="product-name">焦糖馬卡龍</p>
+              <P class="product-price">NT$450</p>
+            </figcaption>
+            <button class="lg-btn w-full">加入購物車</button>
+          </li>
+
+          <li class="w-[32%] max-w-[300px] h-full">
+            <figure class="relative">
+              <div class="label absolute z-10 left-5"><span>本日精選</span></div>
+              <img class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer" src="./images/favorite_border.png" alt="加入我的收藏">
+              <img class="h-[315px] w-full object-cover" src="https://bit.ly/2zBDAxX">
             </figure>
             <figcaption class="flex">
               <p class="product-name">焦糖馬卡龍</p>
@@ -166,7 +179,7 @@
             <figure class="relative">
               <div class="label absolute z-10 left-5"><span>本日精選</span></div>
               <img class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer" src="./images/favorite_border.png" alt="加入我的收藏">
-              <img class="max-h-[315px]" src="./images/p-5.png">
+              <img class="h-[315px] w-full object-cover" src="https://bit.ly/2QbVsVR">
             </figure>
             <figcaption class="flex">
               <p class="product-name">焦糖馬卡龍</p>
@@ -174,20 +187,7 @@
             </figcaption>
             <button class="lg-btn w-full">加入購物車</button>
           </li>
-
-          <li class="w-[32%] max-w-[300px]">
-            <figure class="relative">
-              <div class="label absolute z-10 left-5"><span>本日精選</span></div>
-              <img class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer" src="./images/favorite_border.png" alt="加入我的收藏">
-              <img class="max-h-[315px] w-full h-full object-cover" src="https://bit.ly/2QbVsVR">
-            </figure>
-            <figcaption class="flex">
-              <p class="product-name">焦糖馬卡龍</p>
-              <P class="product-price">NT$450</p>
-            </figcaption>
-            <button class="lg-btn w-full">加入購物車</button>
-          </li>
-    
+        </ul>
       </section>
     </main>
 
