feat:add-footer-subscription

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
       <article>
         <section class="bg-[#EAF0ED] h-[420px] mt-[80px]">
-          <div class=" flex justify-between mx-auto w-full max-w-[940px]">
+          <div class="flex justify-between mx-auto w-full max-w-[940px]">
             <img
               class="w-full h-full max-w-[460px] max-h-[460px] object-cover -mt-[20px] md-[20px]"
               src="https://bit.ly/2xPn7Eq"
@@ -98,7 +98,7 @@
                 class="flex flex-col justify-between [writing-mode:vertical-rl] [text-orientation:upright] text-[#8DA291] h-[280px] w-full max-w-[256px] mx-auto"
               >
                 <p>青山依舊在，幾度夕陽紅。慣看秋月春</p>
-                <p>一壺濁酒喜相逢，浪花淘盡英雄。是非</p> 
+                <p>一壺濁酒喜相逢，浪花淘盡英雄。是非</p>
                 <p>轉頭空，滾滾長江東逝水，白髮漁樵江</p>
                 <p>古今多少事，都付笑談中。</p>
                 <p>&nbsp</p>
@@ -116,7 +116,9 @@
         </section>
 
         <section class="bg-[#EAF0ED] h-[420px] mt-[105px]">
-          <div class=" flex flex-row-reverse justify-between mx-auto w-full max-w-[940px]">
+          <div
+            class="flex flex-row-reverse justify-between mx-auto w-full max-w-[940px]"
+          >
             <img
               class="w-full h-full max-w-[460px] max-h-[460px] object-cover -mt-[20px] md-[20px]"
               src="https://bit.ly/2zzAQS4"
@@ -126,7 +128,7 @@
                 class="flex flex-col justify-between [writing-mode:vertical-rl] [text-orientation:upright] text-[#8DA291] h-[280px] w-full max-w-[256px] mx-auto"
               >
                 <p>青山依舊在，幾度夕陽紅。慣看秋月春</p>
-                <p>一壺濁酒喜相逢，浪花淘盡英雄。是非</p> 
+                <p>一壺濁酒喜相逢，浪花淘盡英雄。是非</p>
                 <p>轉頭空，滾滾長江東逝水，白髮漁樵江</p>
                 <p>古今多少事，都付笑談中。</p>
                 <p>&nbsp</p>
@@ -142,48 +144,78 @@
             </div>
           </div>
         </section>
-        <section class=" flex justify-center items-center mt-[95px] mb-[80px]">
-          <img class="max-w-[89px] max-h-[328px]" src="./images/lg-想吃甜點是不需要理由的@2x.png">
+        <section class="flex justify-center items-center mt-[95px] mb-[80px]">
+          <img
+            class="max-w-[89px] max-h-[328px]"
+            src="./images/lg-想吃甜點是不需要理由的@2x.png"
+          />
         </section>
       </article>
-        
+
       <section class="mb-[60px]">
         <ul class="flex justify-between max-w-[940px] mx-auto">
           <li class="w-[32%] max-w-[300px]">
             <figure class="relative">
-              <div class="label absolute z-10 left-5"><span>本日精選</span></div>
-              <img class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer" src="./images/favorite_border.png" alt="加入我的收藏">
-              <img class="h-[315px] w-full object-cover" src="https://bit.ly/2zBjQuq">
+              <div class="label absolute z-10 left-5">
+                <span>本日精選</span>
+              </div>
+              <img
+                class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer"
+                src="./images/favorite_border.png"
+                alt="加入我的收藏"
+              />
+              <img
+                class="h-[315px] w-full object-cover"
+                src="https://bit.ly/2zBjQuq"
+              />
             </figure>
             <figcaption class="flex">
               <p class="product-name">焦糖馬卡龍</p>
-              <P class="product-price">NT$450</p>
+              <p class="product-price">NT$450</p>
             </figcaption>
             <button class="lg-btn w-full">加入購物車</button>
           </li>
 
           <li class="w-[32%] max-w-[300px] h-full">
             <figure class="relative">
-              <div class="label absolute z-10 left-5"><span>本日精選</span></div>
-              <img class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer" src="./images/favorite_border.png" alt="加入我的收藏">
-              <img class="h-[315px] w-full object-cover" src="https://bit.ly/2zBDAxX">
+              <div class="label absolute z-10 left-5">
+                <span>本日精選</span>
+              </div>
+              <img
+                class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer"
+                src="./images/favorite_border.png"
+                alt="加入我的收藏"
+              />
+              <img
+                class="h-[315px] w-full object-cover"
+                src="https://bit.ly/2zBDAxX"
+              />
             </figure>
             <figcaption class="flex">
               <p class="product-name">焦糖馬卡龍</p>
-              <P class="product-price">NT$450</p>
+              <p class="product-price">NT$450</p>
             </figcaption>
             <button class="lg-btn w-full">加入購物車</button>
           </li>
 
           <li class="w-[32%] max-w-[300px]">
             <figure class="relative">
-              <div class="label absolute z-10 left-5"><span>本日精選</span></div>
-              <img class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer" src="./images/favorite_border.png" alt="加入我的收藏">
-              <img class="h-[315px] w-full object-cover" src="https://bit.ly/2QbVsVR">
+              <div class="label absolute z-10 left-5">
+                <span>本日精選</span>
+              </div>
+              <img
+                class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer"
+                src="./images/favorite_border.png"
+                alt="加入我的收藏"
+              />
+              <img
+                class="h-[315px] w-full object-cover"
+                src="https://bit.ly/2QbVsVR"
+              />
             </figure>
             <figcaption class="flex">
               <p class="product-name">焦糖馬卡龍</p>
-              <P class="product-price">NT$450</p>
+              <p class="product-price">NT$450</p>
             </figcaption>
             <button class="lg-btn w-full">加入購物車</button>
           </li>
@@ -191,6 +223,22 @@
       </section>
     </main>
 
+    <footer>
+      <section class="flex items-center h-[116px] bg-[#3F5D45] max-[768px]:h-[186px]">
+        <div class="flex justify-between items-center w-[780px] mx-auto max-[768px]:flex-col h-[122px]">
+          <div class="flex justify-between w-[276px] ">
+            <img class="w-[40px] h-[40px]" src="./images/logo-light@2x.png">
+            <p class="flex items-center justify-center text-[#EAF0ED] text-2xl">訂閱你我的甜蜜郵件</p>
+          </div>
+          <div class="relative flex bg-[#EAF0ED] justify-end w-[380px] h-[56px]">
+            <input class="key-in w-[272px]" type="text">
+            <img class="absolute top-4 left-5 w-[24px] h-[24px]" src="./images/mail-24px.png" alt="訂閱信箱輸入欄位">
+            <button class="accent-btn w-[64px] flex justify-center items-center" type="submit"><img src="./images/arrow_forward-24px.png"></button>
+        </div>
+
+      </section>
+      <section></section>
+    </footer>
 
     <script src="./js/all.js"></script>
   </body>
