--- a/product.html
+++ b/product.html
@@ -1,33 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sweetaste產品頁</title>
-    <link href="./src/output.css" rel="stylesheet">
-    <link href="./scss/main.css" rel="stylesheet">
-</head>
-<body>
-    <header class="flex justify-between w-full max-w-[1024px] h-10 px-[33px] md:px-[42px] mr-auto ml-auto mt-[30px] mb-[30px] items-center">
-        <button class="hover:cursor-pointer block md:hidden" >
-            <img src="./images/dehaze-24px.png" alt="漢堡選單">
-        </button>
-        <picture class="w-[200px] h-10 items-center">
-            <source media="(max-width:768px)" srcset="./images\logotype-lg-dark.svg">
-            <img class="h-10" src="./images/logo-all-dark.svg" alt="品牌Logo">
-        </picture>
-        <nav class="max-w-[300px] flex justify-between gap-[79px] items-center">
-            <ul class="w-[215px] hidden md:flex justify-between items-center">
-                <li class="text-[#3F5D45] font-semibold"><a href="index.html">首頁</a></li>
-                <li class="text-[#3F5D45] font-semibold"><a href="product.html">甜點</a></li>
-                <li class="text-[#3F5D45] font-semibold"><a href="login.html">登入</a></li>
-            </ul>
-            <div class="w-[24px] ">
-                <a href="cart.html"><img src="./images/shopping_cart.png" alt="前往購物車"></a>
-            </div>
-        </nav>
+    <link href="./src/output.css" rel="stylesheet" />
+    <link href="./scss/main.css" rel="stylesheet" />
+  </head>
+  <body>
+    <header
+      class="flex justify-between w-full max-w-[1024px] h-10 px-[33px] md:px-[42px] mr-auto ml-auto mt-[30px] mb-[30px] items-center"
+    >
+      <button class="hover:cursor-pointer block md:hidden">
+        <img src="./images/dehaze-24px.png" alt="漢堡選單" />
+      </button>
+      <picture class="w-[200px] h-10 items-center">
+        <source
+          media="(max-width:768px)"
+          srcset="./images\logotype-lg-dark.svg"
+        />
+        <img class="h-10" src="./images/logo-all-dark.svg" alt="品牌Logo" />
+      </picture>
+      <nav class="max-w-[300px] flex justify-between gap-[79px] items-center">
+        <ul class="w-[215px] hidden md:flex justify-between items-center">
+          <li class="text-[#3F5D45] font-semibold">
+            <a href="index.html">首頁</a>
+          </li>
+          <li class="text-[#3F5D45] font-semibold">
+            <a href="product.html">甜點</a>
+          </li>
+          <li class="text-[#3F5D45] font-semibold">
+            <a href="login.html">登入</a>
+          </li>
+        </ul>
+        <div class="w-[24px]">
+          <a href="cart.html"
+            ><img src="./images/shopping_cart.png" alt="前往購物車"
+          /></a>
+        </div>
+      </nav>
     </header>
 
-<script src="./js/all.js"></script>
-</body>
+    <main class="max-w-[1024px] min-w-[375px] w-full mx-auto flex justify-center">
+      <section class=" w-full max-w-[940px] h-[496px] flex justify-center overflow-hidden relative">
+        <img class="w-full h-full object-cover" src="https://bit.ly/2Qodh3Z" alt="主視覺">
+        <img class="absolute top-10 right-10 w-[89px] h-[328px]" src="./images/sm-今天是個吃甜點的好日子@2x.png" alt="今天是個吃甜點的好日子">
+      </section>
+    </main>
+
+    <script src="./js/all.js"></script>
+  </body>
 </html>
