--- a/product.html
+++ b/product.html
@@ -57,8 +57,8 @@
         />
       </section>
 
-      <section class="max-w-[940px] mx-auto flex justify-between mt-[60px]">
-        <nav class="w-[300px]">
+      <section class="max-w-[940px] mx-auto flex justify-between mt-[60px] max-[769px]:flex-col max-[769px]:items-center">
+        <nav class="min-w-[300px] max-[769px]:w-full max-[769px]:mb-[30px]">
           <ul>
             <li class="nav-title"><span>甜點類別</span></li>
             <li class="nav-btn"><a>所有甜點(48)</a></li>
@@ -68,8 +68,8 @@
           </ul>
         </nav>
 
-        <section class="w-[620px]">
-          <ul class="grid grid-cols-2 gap-5">
+        <section class="w-[620px] max-[769px]:w-[315px] ">
+          <ul class="grid grid-cols-2 gap-5 max-[769px]:grid-cols-1">
             <li>
               <figure class="relative">
                 <div class="label absolute z-10 left-5">
@@ -198,7 +198,7 @@
             </li>
           </ul>
 
-          <ul class="flex justify-end mt-[30px]">
+          <ul class="flex justify-end mt-[30px] max-[769px]:justify-center">
             <li>
               <button
                 class="w-[60px] h-[60px] flex justify-center items-center cursor-pointer border border-[#EAF0ED]"
