--- a/index.html
+++ b/index.html
@@ -211,8 +211,9 @@
         </section>
       </article>
 
+
       <section class="mb-[60px]">
-        <ul class="flex justify-between max-w-[940px] mx-auto">
+        <ul class="flex justify-between max-w-[940px] mx-auto max-[769px]:hidden">
           <li class="w-[32%] max-w-[300px]">
             <figure class="relative">
               <div class="label absolute z-10 left-5">
@@ -279,6 +280,164 @@
             <button class="lg-btn w-full">加入購物車</button>
           </li>
         </ul>
+        <!-- 行動版 -->
+        <ul class=" flex mt-[30px] w-[315px] mx-auto overflow-x-auto overflow-y-hidden gap-4 snap-x snap-mandatory scroll-smooth [scrollbar-width:none]">
+          <li class="w-[315px] shrink-0 snap-start">
+            <figure class="relative">
+              <div class="label absolute z-10 left-5">
+                <span>本日精選</span>
+              </div>
+              <img
+                class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer"
+                src="./images/favorite_border.png"
+                alt="加入我的收藏"
+              />
+              <img
+                class="h-[315px] w-full object-cover"
+                src="https://bit.ly/2zBjQuq"
+              />
+            </figure>
+            <figcaption class="flex">
+              <p class="product-name">焦糖馬卡龍</p>
+              <p class="product-price">NT$450</p>
+            </figcaption>
+            <button class="lg-btn w-full">加入購物車</button>
+          </li>
+
+          <li class="w-[315px] shrink-0 snap-start">
+            <figure class="relative">
+              <div class="label absolute z-10 left-5">
+                <span>本日精選</span>
+              </div>
+              <img
+                class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer"
+                src="./images/favorite_border.png"
+                alt="加入我的收藏"
+              />
+              <img
+                class="h-[315px] w-full object-cover"
+                src="https://bit.ly/2zBjQuq"
+              />
+            </figure>
+            <figcaption class="flex">
+              <p class="product-name">焦糖馬卡龍</p>
+              <p class="product-price">NT$450</p>
+            </figcaption>
+            <button class="lg-btn w-full">加入購物車</button>
+          </li>
+
+           <li class="w-[315px] shrink-0 snap-start">
+            <figure class="relative">
+              <div class="label absolute z-10 left-5">
+                <span>本日精選</span>
+              </div>
+              <img
+                class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer"
+                src="./images/favorite_border.png"
+                alt="加入我的收藏"
+              />
+              <img
+                class="h-[315px] w-full object-cover"
+                src="https://bit.ly/2zBjQuq"
+              />
+            </figure>
+            <figcaption class="flex">
+              <p class="product-name">焦糖馬卡龍</p>
+              <p class="product-price">NT$450</p>
+            </figcaption>
+            <button class="lg-btn w-full">加入購物車</button>
+          </li>
+
+           <li class="w-[315px] shrink-0 snap-start">
+            <figure class="relative">
+              <div class="label absolute z-10 left-5">
+                <span>本日精選</span>
+              </div>
+              <img
+                class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer"
+                src="./images/favorite_border.png"
+                alt="加入我的收藏"
+              />
+              <img
+                class="h-[315px] w-full object-cover"
+                src="https://bit.ly/2zBjQuq"
+              />
+            </figure>
+            <figcaption class="flex">
+              <p class="product-name">焦糖馬卡龍</p>
+              <p class="product-price">NT$450</p>
+            </figcaption>
+            <button class="lg-btn w-full">加入購物車</button>
+          </li>
+
+           <li class="w-[315px] shrink-0 snap-start">
+            <figure class="relative">
+              <div class="label absolute z-10 left-5">
+                <span>本日精選</span>
+              </div>
+              <img
+                class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer"
+                src="./images/favorite_border.png"
+                alt="加入我的收藏"
+              />
+              <img
+                class="h-[315px] w-full object-cover"
+                src="https://bit.ly/2zBjQuq"
+              />
+            </figure>
+            <figcaption class="flex">
+              <p class="product-name">焦糖馬卡龍</p>
+              <p class="product-price">NT$450</p>
+            </figcaption>
+            <button class="lg-btn w-full">加入購物車</button>
+          </li>
+
+           <li class="w-[315px] shrink-0 snap-start">
+            <figure class="relative">
+              <div class="label absolute z-10 left-5">
+                <span>本日精選</span>
+              </div>
+              <img
+                class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer"
+                src="./images/favorite_border.png"
+                alt="加入我的收藏"
+              />
+              <img
+                class="h-[315px] w-full object-cover"
+                src="https://bit.ly/2zBjQuq"
+              />
+            </figure>
+            <figcaption class="flex">
+              <p class="product-name">焦糖馬卡龍</p>
+              <p class="product-price">NT$450</p>
+            </figcaption>
+            <button class="lg-btn w-full">加入購物車</button>
+          </li>
+
+           <li class="w-[315px] shrink-0 snap-start">
+            <figure class="relative">
+              <div class="label absolute z-10 left-5">
+                <span>本日精選</span>
+              </div>
+              <img
+                class="absolute z-10 right-5 top-[19px] hover:scale-150 cursor-pointer"
+                src="./images/favorite_border.png"
+                alt="加入我的收藏"
+              />
+              <img
+                class="h-[315px] w-full object-cover"
+                src="https://bit.ly/2zBjQuq"
+              />
+            </figure>
+            <figcaption class="flex">
+              <p class="product-name">焦糖馬卡龍</p>
+              <p class="product-price">NT$450</p>
+            </figcaption>
+            <button class="lg-btn w-full">加入購物車</button>
+          </li>
+
+        </ul>
+
       </section>
     </main>
 
