--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </ul>
       </section>
 
-      <article class="mt-[60px] max-[769px]:hidden">
+      <article class="hidden mt-[60px] md:block">
         <section class="bg-[#EAF0ED] h-[420px] mt-[80px]">
           <div class="flex justify-between mx-auto w-full max-w-[940px]">
             <img
@@ -155,7 +155,7 @@
       </article>
 
       <!-- 行動版文章區塊 -->
-      <article class="md:hidden">
+      <article class="block md:hidden">
         <section class="w-full flex flex-col items-center">
           <img
             class="w-[196px] h-[60px] my-[30px]"
@@ -212,8 +212,8 @@
       </article>
 
 
-      <section class="mb-[60px]">
-        <ul class="flex justify-between max-w-[940px] mx-auto max-[769px]:hidden">
+      <section class="mb-[60px] ">
+        <ul class="justify-between max-w-[940px] mx-auto md:flex hidden">
           <li class="w-[32%] max-w-[300px]">
             <figure class="relative">
               <div class="label absolute z-10 left-5">
@@ -281,7 +281,7 @@
           </li>
         </ul>
         <!-- 行動版 -->
-        <ul class=" flex mt-[30px] w-[315px] mx-auto overflow-x-auto overflow-y-hidden gap-4 snap-x snap-mandatory scroll-smooth [scrollbar-width:none]">
+        <ul class=" flex mt-[30px] w-[315px] mx-auto overflow-x-auto overflow-y-hidden gap-4 snap-x snap-mandatory scroll-smooth [scrollbar-width:none] md:hidden">
           <li class="w-[315px] shrink-0 snap-start">
             <figure class="relative">
               <div class="label absolute z-10 left-5">
@@ -441,7 +441,7 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="max-w-[1024px] mx-auto">
       <section
         class="flex items-center h-[116px] bg-[#3F5D45] max-[769px]:h-[186px]"
       >
