feat:fix subscription RWD

--- a/cart.html
+++ b/cart.html
@@ -28,6 +28,96 @@
         </nav>
     </header>
 
+    <main>
+        
+    </main>
+
+
+
+
+    <footer class="max-w-[1024px] mx-auto">
+      <section
+        class="flex items-center h-[116px] bg-[#3F5D45] max-[769px]:h-[186px]"
+      >
+        <div
+          class="flex justify-between items-center w-[780px] mx-auto max-[769px]:flex-col h-[122px]"
+        >
+          <div class="flex justify-between w-[276px]">
+            <img
+              class="w-[40px] h-[40px]"
+              src="./images/logo-light@2x.png"
+              alt="Sweetaste品牌Logo"
+            />
+            <p class="flex items-center justify-center text-[#EAF0ED] text-2xl">
+              訂閱你我的甜蜜郵件
+            </p>
+          </div>
+          <div
+            class="relative flex bg-[#EAF0ED] justify-end w-[380px] h-[56px] max-[769px]:w-[315px]"
+          >
+            <input class="key-in w-[200px] md:w-[272px]" type="text" />
+            <img
+              class="absolute top-4 left-5 w-[24px] h-[24px]"
+              src="./images/mail-24px.png"
+              alt="訂閱信箱輸入欄位"
+            />
+            <button
+              class="accent-btn w-[64px] flex justify-center items-center"
+              type="submit"
+            >
+              <img
+                src="./images/arrow_forward-24px.png"
+                alt="提交訂閱電子信箱"
+              />
+            </button>
+          </div>
+        </div>
+      </section>
+
+      <section class="h-[341px] bg-[#EAF0ED] flex items-center">
+        <div
+          class="flex justify-between items-center w-full max-w-[780px] min-w-[315px] mx-auto max-[769px]:block max-[769px]:w-[315px]"
+        >
+          <div>
+            <img
+              class="w-[171px] h-[27px] mb-[116px] max-[769px]:mb-[40px]"
+              src="./images/logotype-lg-dark.svg"
+              alt="Sweetaste品牌Logo"
+            />
+            <div class="text-[#3F5D45] information-font mb-[30px]">
+              <p>07-1234-5678</p>
+              <p>sweetaste@email.com</p>
+              <p>800 高雄市新興區幸福路 520 號</p>
+            </div>
+            <div class="flex justify-between w-[72px] max-[769px]:mb-[30px]">
+              <a href="#"
+                ><img
+                  class="w-[32px] h-[32px]"
+                  src="./images/ic-line@.svg"
+                  alt="官方LINE連結"
+              /></a>
+              <a href="#"
+                ><img
+                  class="w-[32px] h-[32px]"
+                  src="./images/ic-facebook.svg"
+                  alt="臉書粉專連結"
+              /></a>
+            </div>
+          </div>
+          <div
+            class="w-[258px] h-[281px] flex flex-col justify-between items-end max-[769px]:h-full"
+          >
+            <img
+              class="w-[60px] h-[218px] max-[769px]:hidden"
+              src="./images/sm-今天是個吃甜點的好日子@2x.png"
+              alt="今天是個吃甜點的好日子。"
+            />
+            <p class="text-[#3F5D45]">© 2018 Sweetaste* All Rights Reserved</p>
+          </div>
+        </div>
+      </section>
+    </footer>
+
 <script src="./js/all.js"></script>
 </body>
 </html>
