--- a/login.html
+++ b/login.html
@@ -200,7 +200,7 @@
           <div
             class="relative flex bg-[#EAF0ED] justify-end w-[380px] h-[56px] max-[769px]:w-[315px]"
           >
-            <input class="key-in w-[272px]" type="text" />
+            <input class="key-in w-[200px] md:w-[272px]" type="text" />
             <img
               class="absolute top-4 left-5 w-[24px] h-[24px]"
               src="./images/mail-24px.png"
